@@ -36,7 +36,10 @@ namespace ns3 {
  * speed, pause and position are uniformly distributed random variables. 
  * The difference is that the initial values of this parameters are not 
  * from uniform distribution but from stationary distribution of RWM model.
- * The implementation of this model is 2d-specific and with nonzero nodes speeds.
+ * The implementation of this model is 2D-specific and with nonzero nodes speeds.
+ * In the 3D ns-3 coordinate system, the momement occurs on the 
+ * \f$ z=\overline{Z} \f$ plane, where \f$ \overline{Z} \f$ is a constant which
+ * can be configured using the Z attribute. 
  *
  * Based on NS-2 implementation by Toilers Research Group -- Colorado
  *      School of Mines (http://toilers.mines.edu). 
